<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:fillViewport="true">

	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="vertical" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:paddingTop="10dip">

		<ImageView android:id="@+id/image_preview"
		           android:layout_width="fill_parent"
		           android:layout_height="wrap_content"
		           android:paddingLeft="10dip"
		           android:paddingRight="10dip"
		           android:contentDescription="@string/image_preview_description"
		           android:src="@drawable/house_icon"
		           />

		<Button android:id="@+id/camera_button"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/take_photo"
		        android:drawableRight="@drawable/add"
		        android:paddingRight="10dip"
		        android:paddingLeft="10dip"/>

		<Button android:id="@+id/gallery_button"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/choose_photo"
		        android:drawableRight="@drawable/add"
		        android:paddingRight="10dip"
		        android:paddingLeft="10dip"/>

		<Button android:id="@+id/details_button"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/add_details"
		        android:drawableRight="@drawable/add"
		        android:paddingRight="10dip"
		        android:paddingLeft="10dip" />

		<Button android:id="@+id/position_button"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/find_position"
		        android:drawableRight="@drawable/add"
		        android:paddingRight="10dip"
		        android:paddingLeft="10dip"
		/>

		<View android:layout_width="1dip" android:layout_height="10dip"
			android:src="@drawable/spacer" />
			
		<TextView android:paddingRight="10dip" android:paddingLeft="10dip"
			android:layout_width="wrap_content" android:textColor="#87190f"
			android:id="@+id/progress_text" android:layout_height="wrap_content"
			android:text="@string/awaiting_gps" />

		<TextView android:paddingRight="10dip"
		          android:paddingLeft="10dip"
		          android:layout_width="wrap_content"
		          android:textColor="#87190f"
		          android:id="@+id/debug_text"
		          android:layout_height="wrap_content"
		          android:text="@string/debug_text" />

        <ProgressBar android:id="@+id/loading"
                     android:indeterminate="true"
                     android:visibility="gone"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginTop="4dip"
                     style="@android:style/Widget.ProgressBar.Inverse"
                     />

		<Button android:id="@+id/report_button" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:text="@string/report"
			android:paddingRight="10dip" android:paddingLeft="10dip" />


		<TextView android:layout_width="fill_parent"
			android:layout_weight="1" android:layout_height="0dp"
			android:text=" " />

		<ImageView android:id="@+id/background_image"
			android:scaleType="centerCrop" android:layout_width="fill_parent"
			android:layout_gravity="bottom" android:layout_height="wrap_content"
			android:src="@drawable/street_background_smaller" android:contentDescription="@string/background_image_description"/>

	</LinearLayout>

</ScrollView>
